# nove

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  test.yml
crates/nove/: Cargo.toml
crates/nove/src/: lib.rs
crates/nove_backend/: Cargo.toml
crates/nove_backend/src/: device.rs  dtype.rs  lib.rs  shape.rs
crates/nove_backend/src/backend/: candle.rs  mod.rs  native.rs
crates/nove_backend/tests/: autograd_primitives.rs  backend_dispatch_tests.rs  conversion_tests.rs  device_handle_tests.rs  tensor_payload_tests.rs
crates/nove_candle/: Cargo.toml
crates/nove_candle/src/: lib.rs
crates/nove_cpu/: Cargo.toml
crates/nove_dataloader/: Cargo.toml
crates/nove_dataloader/src/: lib.rs
crates/nove_dataloader/src/common/: batch_dataloader.rs  image_classification_dataloader.rs  mod.rs  prefetch_dataloader.rs
crates/nove_dataloader/src/util/: basic_dataloader.rs  mod.rs
crates/nove_dataloader/tests/: test_batch_dataloader.rs  test_batched_dataloader.rs  test_prefetch_dataloader.rs
crates/nove_dataloader/tests/util/: mod.rs
crates/nove_dataset/: Cargo.toml
crates/nove_dataset/src/: lib.rs
crates/nove_dataset/src/common/: augmented_dataset.rs  downloader.rs  extractor.rs  iterable_dataset.rs  merged_dataset.rs  mod.rs  persistent_dataset.rs  shufflable_dataset.rs  split_dataset.rs  vec_dataset.rs
crates/nove_dataset/src/resource/: acl_imdb10.rs  acl_imdb2.rs  acl_imdb_unsup.rs  cifar10.rs  cifar100.rs  mnist.rs  mod.rs
crates/nove_dataset/src/util/: persisted_dataset.rs  shuffled_dataset.rs
crates/nove_dataset/tests/: test_iterable_dataset.rs  test_persisted_dataset.rs  test_persistent_dataset.rs  test_shufflable_dataset.rs  test_shuffled_dataset.rs
crates/nove_dataset/tests/util/: mod.rs
crates/nove_learner/: Cargo.toml
crates/nove_learner/src/: lib.rs
crates/nove_learner/src/common/: epoch_learner.rs  image_classification_learner.rs  mod.rs
crates/nove_learner/src/common/epoch_learner/: mod.rs
crates/nove_lossfn/: Cargo.toml
crates/nove_lossfn/src/: bce_loss.rs  bce_with_logits_loss.rs  cross_entropy.rs  cross_entropy_loss.rs  cross_entropy_lossfn.rs  l1_loss.rs  lib.rs  mse_loss.rs  nll.rs  nll_loss.rs  nll_lossfn.rs
crates/nove_lossfn/src/common/: mod.rs
crates/nove_lossfn/tests/: test_bce_lossfn.rs  test_bce_with_logits_lossfn.rs  test_cross_entropy_lossfn.rs  test_l1_lossfn.rs  test_mse_lossfn.rs
crates/nove_macro/: Cargo.toml
crates/nove_metric/: Cargo.toml
crates/nove_metric/src/: acc.rs  cpu.rs  lib.rs  loss.rs
crates/nove_model/: Cargo.toml
crates/nove_model/src/: lib.rs
crates/nove_model/src/layer/: batch_norm.rs  batch_norm1d.rs  batch_norm2d.rs  cnn.rs  conv.rs  conv1d.rs  conv1d_block.rs  conv2d.rs  conv2d_block.rs  dropout.rs  embedding.rs  gelu.rs  gru.rs  gru_cell.rs  layernorm.rs  linear.rs  linear_block.rs  lstm_cell.rs  mod.rs  pool.rs  relu.rs  rnn.rs  rnn_cell.rs  rnncell.rs  silu.rs  tanh.rs
crates/nove_model/src/layer/activation/: mod.rs  relu.rs  sigmoid.rs
crates/nove_model/src/layer/pool/: avg_pool1d.rs  avg_pool2d.rs  max_pool1d.rs  mod.rs
crates/nove_model/src/nn/: batch_norm1d.rs  batch_norm2d.rs  conv1d.rs  conv1d_block.rs  conv2d.rs  conv2d_block.rs  dropout.rs  embedding.rs  flatten.rs  gru.rs  gru_cell.rs  layernorm.rs  linear.rs  linear_block.rs  lstm_cell.rs  mod.rs  rnn.rs  rnn_cell.rs
crates/nove_model/src/nn/activation/: gelu.rs  mod.rs  relu.rs  sigmoid.rs  silu.rs  tanh.rs
crates/nove_model/src/nn/pool/: avg_pool1d.rs  avg_pool2d.rs  max_pool1d.rs  max_pool2d.rs  mod.rs
crates/nove_model/src/paramstore/: mod.rs  safetensors.rs
crates/nove_model/tests/: activation_test.rs  batch_norm1d_test.rs  batch_norm2d_test.rs  conv1d_block_test.rs  conv1d_test.rs  conv2d_block_test.rs  conv2d_test.rs  dropout_test.rs  embedding_test.rs  gru_cell_test.rs  gru_test.rs  layer_norm_test.rs  linear_block_test.rs  linear_test.rs  lstm_cell_test.rs  pool1d_test.rs  pool2d_test.rs  rnn_cell_test.rs  rnn_test.rs  test_conv1d.rs  test_conv1d_block.rs  test_conv2d.rs  test_derive_model.rs  test_dropout.rs  test_linear.rs  test_lstmcell.rs  test_pool.rs  test_pool1d.rs  test_relu.rs  test_rnncell.rs
crates/nove_native/: Cargo.toml
crates/nove_native/src/: lib.rs
crates/nove_optimizer/: Cargo.toml
crates/nove_optimizer/src/: adagrad.rs  adam.rs  adamw.rs  lib.rs  rmsprop.rs  sgd.rs
crates/nove_tensor/: Cargo.toml
crates/nove_tensor/src/: activation.rs  backend_candle_compat.rs  conversion.rs  creation.rs  device.rs  lib.rs  operation.rs  property.rs  safetensor.rs  tensor.rs
crates/nove_tensor/src/backpropagation/: grad.rs  graph.rs  mod.rs
crates/nove_tensor/src/creation/: conversion.rs  factory.rs  mod.rs
crates/nove_tensor/src/format/: mod.rs  safetensor.rs
crates/nove_tensor/src/op/: activation.rs  arithmetic.rs  combination.rs  comparison.rs  convolution.rs  elementwise.rs  index.rs  matrix.rs  mod.rs  pool.rs  power.rs  reduction.rs  sign.rs
crates/nove_tensor/src/operation/: arithmetic.rs  combination.rs  comparison.rs  convolution.rs  elementwise.rs  gradient.rs  matrix.rs  mod.rs  reduction.rs  shape.rs
crates/nove_tensor/src/property/: device.rs  dtype.rs  mod.rs  name.rs  shape.rs
crates/nove_tensor/tests/: backend_abstraction.rs  device_autograd.rs  test_conversion.rs  test_device.rs  test_operation.rs  test_property.rs  test_tensor.rs
crates/nove_tensor/tests/util/: mod.rs
examples/: display_device.rs  display_model.rs  display_paramstore.rs  display_tensor.rs
examples/cifar10_cnn/: Cargo.toml
examples/cifar10_cnn/examples/: test.rs  test_cifar10_cnn.rs  train.rs  train_cifar10_cnn.rs
examples/cifar10_cnn/src/: lib.rs
examples/mnist_cnn/: Cargo.toml
examples/mnist_cnn/examples/: test.rs  test_mnist_cnn.rs  train.rs  train_mnist_cnn.rs
examples/mnist_cnn/src/: lib.rs
nove-book/: book.toml
nove-book/src/: SUMMARY.md  device.md  tensor.md
src/: lib.rs
src/dataloader/: mod.rs
src/dataset/: mod.rs
src/device/: mod.rs
tests/: mod.rs  simple_dataset.rs  test_persisted_dataset.rs  test_shuffled_dataset.rs
(+38 files in other folders)
