[workspace]
resolver = "2"
members = [
    "crates/nove",
    "crates/nove_dataloader",
    "crates/nove_dataset", 
    "crates/nove_learner", 
    "crates/nove_lossfn", 
    "crates/nove_macro", 
    "crates/nove_model", 
    "crates/nove_optimizer",
    "crates/nove_tensor",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["lokarex <lokarex@outlook.com>"]
description = "An easy-to-use, lightweight deep learning library wrapped around Candle Tensor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lokarex/nove"

[workspace.dependencies]
bincode = "2.0.1"
candle-core = "0.9.1"
crossbeam = "0.8.4"
dashmap = "6.1.0"
indexmap = "2.13.0"
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.17"
proptest = "1.9.0"
tempfile = "3.23.0"
