[package]
name = "nove"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nove_dataloader = { path = "../nove_dataloader", version = "=0.1.1" }
nove_dataset = { path = "../nove_dataset", version = "=0.1.1" }
nove_tensor = { path = "../nove_tensor", version = "=0.1.1" }
nove_model = { path = "../nove_model", version = "=0.1.1" }
nove_lossfn = { path = "../nove_lossfn", version = "=0.1.1" }
nove_optimizer = { path = "../nove_optimizer", version = "=0.1.1" }
