[package]
name = "nove_candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
candle-core = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
