[package]
name = "nove_dataloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nove_tensor = { path = "../nove_tensor", version = "=0.1.1" }
nove_dataset = { path = "../nove_dataset", version = "=0.1.1" }
rand = { workspace = true }

[dev-dependencies]
nove = { path = "../nove" }
