[package]
name = "nove_dataloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nove_dataset = { path = "../nove_dataset", version = "=0.1.1" }
derive_builder = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
nove = { path = "../nove" }
