[package]
name = "nove_dataloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nove_dataset = { path = "../nove_dataset", version = "=0.1.2" }
nove_tensor = { path = "../nove_tensor", version = "=0.1.2", default-features = false }
thiserror = { workspace = true }
rand = { workspace = true }
image = { workspace = true }

[dev-dependencies]
nove = { path = "../nove", default-features = false }

[features]
default = ["candle-cpu"]
candle = ["nove_tensor/candle"]
candle-cpu = ["candle", "nove_tensor/candle-cpu"]
candle-cuda = ["candle", "nove_tensor/candle-cuda"]
candle-metal = ["candle", "nove_tensor/candle-metal"]
native = ["nove_tensor/native"]
native-cpu = ["native", "nove_tensor/native-cpu"]
