[package]
name = "nove_dataset"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bincode = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
md5 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nove = { path = "../nove" }
tempfile = { workspace = true }
