[package]
name = "nove_metric"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
nove_lossfn = { path = "../nove_lossfn", version = "=0.1.1" }
nove_tensor = { path = "../nove_tensor", version = "=0.1.1" }
sysinfo = "0.32"

[dev-dependencies]
nove = { path = "../nove" }
