[package]
name = "nove_metric"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
nove_lossfn = { path = "../nove_lossfn", version = "=0.1.2", default-features = false }
nove_tensor = { path = "../nove_tensor", version = "=0.1.2", default-features = false }
sysinfo = "0.32"

[features]
default = ["candle-cpu"]
candle = ["nove_tensor/candle", "nove_lossfn/candle"]
candle-cpu = ["candle", "nove_tensor/candle-cpu", "nove_lossfn/candle-cpu"]
candle-cuda = ["candle", "nove_tensor/candle-cuda", "nove_lossfn/candle-cuda"]
candle-metal = ["candle", "nove_tensor/candle-metal", "nove_lossfn/candle-metal"]
native = ["nove_tensor/native", "nove_lossfn/native"]
native-cpu = ["native", "nove_tensor/native-cpu", "nove_lossfn/native-cpu"]

[dev-dependencies]
nove = { path = "../nove", default-features = false }
