[package]
name = "nove_model"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexmap = { workspace = true }
nove_tensor = { path = "../nove_tensor", version = "=0.1.1" }
rand = { workspace = true }
thiserror = { workspace = true }
