[package]
name = "nove_optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
nove_tensor = { path = "../nove_tensor", version = "=0.1.1" }
