[package]
name = "nove_tensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nove_backend = { path = "../nove_backend", default-features = false }
candle-core = { workspace = true, optional = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
nove = { path = "../nove", default-features = false }
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = ["candle-cpu"]
candle = ["nove_backend/candle", "dep:candle-core", "nove/candle"]
candle-cpu = ["candle", "nove_backend/candle-cpu"]
candle-cuda = [
    "candle",
    "nove_backend/candle-cuda",
    "candle-core/cuda",
    "nove/candle-cuda",
]
candle-metal = [
    "candle",
    "nove_backend/candle-metal",
    "candle-core/metal",
    "nove/candle-metal",
]
native = ["nove_backend/native", "nove/native"]
native-cpu = ["native", "nove_backend/native-cpu", "nove/native-cpu"]
