[package]
name = "cifar10_cnn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nove = { path = "../../crates/nove", features = ["cuda"] }

[[example]]
name = "test_cifar10_cnn"
path = "examples/test.rs"

[[example]]
name = "train_cifar10_cnn"
path = "examples/train.rs"
