[package]
name = "mnist_cnn"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nove = { path = "../../crates/nove", default-features = false }

[features]
default = []
candle-cuda = ["nove/candle-cuda"]
candle-metal = ["nove/candle-metal"]
